// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/overview/overviewcommandbar > renders 1`] = `
<div
  className="fui-Toolbar ___56tqxz0_es7w5s0 f22iagw f122n59 f1yqiaad"
  data-tabster="{"mover":{"cyclic":true,"direction":0,"memorizeCurrent":true}}"
  data-testid="msla-overview-command-bar"
  role="toolbar"
  style={
    {
      "padding": "8px 0",
    }
  }
>
  <button
    aria-label="Run trigger"
    className="fui-Button r1alrhcs ___oidc8n0_qp3se90 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f9ql6rf f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f19vpps7 fv5swzo f3h1zc4 f1h0usnq fs4ktlq f16h9ulv fx2bmrt fcvwxyo f1ol4fw6 f1q1lw4e f1vmkb5g f1kc2mi9 f1y0svfh fb3rf2x fdrzuqr f15x8b5r fphbwmw f1al02dq f8w4c43 f1dwjv2g f4lkoma fg455y9 f1rvyvqg f1cwzwz f14g86mu f1dcs8yz fjwq6ea f1lr3nhc fn5gmvv f1mbxvi6 f53ppgq f1663y11 f18v5270 f80fkiy fihuait fnxhupq fx507ft fyd6l6x"
    disabled={true}
    onClick={[Function]}
    title="Run trigger"
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.22 8.69a1.5 1.5 0 0 1 0 2.62l-10 5.5A1.5 1.5 0 0 1 5 15.5v-11A1.5 1.5 0 0 1 7.22 3.2l10 5.5Zm-.48 1.75a.5.5 0 0 0 0-.88l-10-5.5A.5.5 0 0 0 6 4.5v11c0 .38.4.62.74.44l10-5.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Run trigger
  </button>
  <button
    aria-label="Refresh"
    className="fui-Button r1alrhcs ___eduuxo0_1tclg4b f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3"
    onClick={[Function]}
    title="Refresh"
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.07 9.05a7 7 0 0 1 12.55-3.22l.13.17H12.5a.5.5 0 1 0 0 1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-1 0v2.2a8 8 0 1 0 1.99 4.77.5.5 0 0 0-1 .08 7 7 0 1 1-13.92-.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Refresh
  </button>
</div>
`;

exports[`lib/overview/overviewcommandbar > renders with Run trigger button 1`] = `
<div
  className="fui-Toolbar ___56tqxz0_es7w5s0 f22iagw f122n59 f1yqiaad"
  data-tabster="{"mover":{"cyclic":true,"direction":0,"memorizeCurrent":true}}"
  data-testid="msla-overview-command-bar"
  role="toolbar"
  style={
    {
      "padding": "8px 0",
    }
  }
>
  <button
    aria-label="Run trigger"
    className="fui-Button r1alrhcs ___eduuxo0_1tclg4b f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3"
    disabled={false}
    onClick={[Function]}
    title="Run trigger"
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.22 8.69a1.5 1.5 0 0 1 0 2.62l-10 5.5A1.5 1.5 0 0 1 5 15.5v-11A1.5 1.5 0 0 1 7.22 3.2l10 5.5Zm-.48 1.75a.5.5 0 0 0 0-.88l-10-5.5A.5.5 0 0 0 6 4.5v11c0 .38.4.62.74.44l10-5.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Run trigger
  </button>
  <button
    aria-label="Refresh"
    className="fui-Button r1alrhcs ___eduuxo0_1tclg4b f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3"
    onClick={[Function]}
    title="Refresh"
    type="button"
  >
    <span
      className="fui-Button__icon rywnvv2 ___963sj20_1qpm2bl f1nizpg2"
    >
      <svg
        aria-hidden={true}
        className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.07 9.05a7 7 0 0 1 12.55-3.22l.13.17H12.5a.5.5 0 1 0 0 1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 0-1 0v2.2a8 8 0 1 0 1.99 4.77.5.5 0 0 0-1 .08 7 7 0 1 1-13.92-.5Z"
          fill="currentColor"
        />
      </svg>
    </span>
    Refresh
  </button>
</div>
`;
